--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -41,18 +41,19 @@
 
 .HEADERSLINKS .LINKS a{ /* PROPRIEDADE DOS LINKS DENTRO DA DIV*/
     margin: 17px;
-    color: #000000;
+    color: #111111;
     font-size: 14px;
     font-weight: 300;
-    font-family: "Space Grotesk", sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-style: normal;
     font-optical-sizing: auto;
     font-weight: 300;
-    font-style: normal;
 }
 
 
 .MENUPRINCIPAL{ /* Section de textos*/
-    margin-top: 2%;
+    margin-top: 3%;
 }
 
 
@@ -72,7 +73,7 @@
     justify-content: center;
     font-size: 49px;
     font-family: 'SF Pro Display', sans-serif;
-    margin-top: -1.7%;
+    margin-top: -1.3%;
 }
 
 .TituloT{ /* Descrição abaixo dos titulos*/
@@ -110,7 +111,7 @@
 }
 
 .BotaoD a{ /* Caminho para o Chatbot/atendente de explicação e apresentação institucional*/
-    color: #000;
+    color: #111111;
     text-decoration: underline;
     font-size: 13px;
     font-family: "Biryani", sans-serif;
@@ -126,7 +127,7 @@
 .GRIDAPRESENTACAO{
     display: grid;
     max-width: 1138px;
-    margin: 1% auto 2% auto;
+    margin: 3% auto 2% auto;
     gap: 10px;
     justify-content: center;
     grid-template-areas:
@@ -134,6 +135,18 @@
     "Raio Grafico";
     
 }
+
+/*@media (max-width: 1161px) {
+    .GRIDAPRESENTACAO {
+        grid-template-areas:
+            "Elo"
+            "Grafico"
+            "Raio";
+        grid-template-columns: 1fr; /* empilha verticalmente 
+        justify-items: center;
+        gap: 10px;
+    }
+}*/
 
 .FORMAGRID{ /*COR DAS BOXES*/
      background: radial-gradient(
@@ -144,7 +157,6 @@
     border-radius: 20px;
     opacity: 0.3;
 }
-
 
 .BOXELOAP{
     grid-area: Elo;
@@ -165,31 +177,4 @@
     height: 188px;
 }
 
-/*.GRIDAPRESENTACAO{ /*FORMACAO DO GRID LAYOUT*
-    display: grid;
-    max-width: 1138px;
-    margin: 0 auto;
-    grid-template-columns: repeat(auto-fit, minmax(164px, 564px));
-    gap: 10px;
-    justify-content: center;
-} 
-
-
-.BOXELOAP{ /*TAMANHO DAS BOXES
-    width: 564px;
-    height: 347px;
-    display: flex;
-    
-} 
-
-.BOXEGRAFICO{
-    width: 564px;
-    height: 554px;
-}
-
-.BOXEFORCA{
-    width: 564px;
-    height: 188px;
-}
-    */
     
