--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0%;
     text-decoration: none;
+    
+}
+
+body{
+       background-color: #F6F6F6;
 }
 
 .MENUPRINCIPAL .HEADERSLINKS .APRESENTACAOELO{ /* BACKGROUND ENTRE AS DIVISOES*/
@@ -14,6 +19,7 @@
     border-radius: 5px;
     height: auto;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.06);
+
 }
 
 .HEADERSLINKS{ /* LOGO E LINKS DO HEADER*/
@@ -21,6 +27,7 @@
     justify-content: space-between;
     align-items: center;
     height: 130px;
+
 }
 
 
@@ -41,7 +48,7 @@
 
 .HEADERSLINKS .LINKS a{ /* PROPRIEDADE DOS LINKS DENTRO DA DIV*/
     margin: 17px;
-    color: #111111;
+    color: #111111e5;
     font-size: 14px;
     font-weight: 300;
     font-family: 'Inter', sans-serif;
@@ -54,6 +61,7 @@
 
 .MENUPRINCIPAL{ /* Section de textos*/
     margin-top: 3%;
+    background-color: #F6F6F6;
 }
 
 
@@ -94,6 +102,7 @@
     justify-content: center;
     align-items: center;   
     font-size: 15px;
+    margin-right: 40px;
 }
 
 .BotaoU a{ /* Caminho para o Chatbot de agenda e conversão*/
@@ -146,10 +155,10 @@
 }*/
 
 .FORMAGRID{ /*COR DAS BOXES*/
-     background: radial-gradient(
+    background: radial-gradient(
     closest-side,
-    rgba(255, 255, 255, 0.05),
-    rgba(0, 0, 0, 0.05)
+    rgba(255, 255, 255, 0.04),
+    rgba(59, 60, 66, 0.04)
     );
     border-radius: 20px;
 }
@@ -164,7 +173,7 @@
 .BOXEGRAFICO{/*TAMANHO E DEFINIÇÃO DA OCUPAÇÃO NO GRID*/
     grid-area: Grafico;
     width: 564px;
-    height: 554px;
+    height: 545px;
 }
 
 .BOXEFORCA{/*TAMANHO E DEFINIÇÃO DA OCUPAÇÃO NO GRID*/
@@ -186,7 +195,7 @@
 
 .boneco1{ /* CABEÇA DO BONECO E ALINHAMENTO NO GRID*/
     margin: 5px 5px -5px 5px;
-    background: #afafaf;
+    background: #D9D9D9;
     border-radius: 50%;
     width: 26px;
     height: 27px;
@@ -195,7 +204,7 @@
     }
 
 .boneco1corpo{ /* CORPO DO BONECO E ALINHAMENTO NO GRID*/
-    background: #afafaf;
+    background: #D9D9D9;
     border-radius: 10px 10px 0px 0px;
     width: 37px;
     height: 24px;
@@ -290,7 +299,60 @@
     display: flex;
     color: #111111;
     justify-content: right;
-     margin: -5% 5% 7% 7%;
+    margin: -5% 5% 7% 7%;
     font-family: "Biryani", sans-serif;
     font-size: 0.8rem;
+}
+
+.Suporte24h{
+    margin: 7% 0% 0% 6%;
+    color: #111111;
+}
+
+.TEXTOBOXES1{
+    font-family: "Biryani", sans-serif;
+    font-weight: bold;
+     font-size: 0.9rem;
+}
+
+.TEXTOBOXES2{
+    font-family: "Biryani", sans-serif;
+     font-size: 0.8rem;
+     color: #4D4D4D;
+}
+
+.imggrafico{
+    display: flex; 
+    justify-content: center; 
+    margin-top: 20%;
+}
+
+.graficotexto{
+    margin: 10% 0% 0% 6%;
+    color: #111111;
+}
+
+
+.vetor{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+}
+
+.vetor1{
+    display: flex;
+    justify-content: center;
+    margin-top: -14%;
+}
+
+.vetor2{
+    display: flex;
+    justify-content: center;
+    margin-top: -17%;
+    height: 60%;
+}
+
+.FORCATEXTO{
+    margin: -5% 0% 0% 6%;  
+
 }
