--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -549,7 +549,7 @@ body{
     width: 246px;
     height: 132px;
     background-color: #212121;
-    margin:7% 0% 0% 35%;
+    margin:4% 0% 0% 35%;
     border-radius: 10px;
     justify-content: center;
     align-items: center;
@@ -594,4 +594,11 @@ body{
 .imgprefeituras{
     width: 100%;
     height: 209px;
+}
+
+.aula1{
+    display: flex;
+    justify-content: center;
+    margin-left: -35%;
+    padding-top: 5%;
 }
