--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -73,7 +73,6 @@ body{
     font-family: "Crimson Text", serif;
     font-weight: 600;
     font-style: italic;
-    margin-bottom: 0%;
 }
 
 .TituloS{ /* Titulo secundario degrade*/
@@ -81,7 +80,7 @@ body{
     justify-content: center;
     font-size: 49px;
     font-family: 'SF Pro Display', sans-serif;
-    margin-top: -1.3%;
+    margin-top: -20px;
 }
 
 .TituloT{ /* Descrição abaixo dos titulos*/
@@ -368,7 +367,7 @@ body{
 
 .SLOGAMINOVACAO{
     display: flex;
-    margin-top: 10%;
+    margin-top: 100px;
     font-family: 'SF Pro Semibold', sans-serif;
     font-weight: 600;
     font-style: italic;
@@ -602,3 +601,320 @@ body{
     margin-left: -35%;
     padding-top: 5%;
 }
+
+.HISTORIASJUNTOS{
+    display: flex;
+    justify-content: center;
+}
+
+.TEXTOHISTORIAJUNTOS{
+    margin-top: 30px;
+    display: flex;
+    font-family: 'SF Pro Semibold', sans-serif;
+    font-weight: 600;
+    font-style: italic;
+    font-size: 1.3rem;
+    color: rgba(17, 17, 17, 0.8);
+}
+
+.imglugares{
+    display: flex;
+    align-content:center ;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.todasimg{
+    display: flex;
+    gap: 100px;
+}
+
+.NOSSOSSERVIÇOA{
+    background-color: #fffdfd;
+    justify-content: center;
+    padding-top: 100px;
+}
+
+
+.NossaConsultoria{
+    width: 100%;
+    margin: 0 auto;
+    justify-items: center;
+}
+
+.Textonossaconsultoria{
+    font-family: 'SF Pro Semibold', sans-serif;
+    font-weight: 600;
+    font-style: italic;
+    font-size: 2.0rem;
+    color: rgba(17, 17, 17, 0.8);
+}
+
+.BOXESCONSULTORIA{
+    display: flex;
+    margin-top: 50px;
+    justify-content: center;
+    gap: 60px;
+}
+
+.BOXESC1{
+    margin-top: 40px;
+    background: radial-gradient(
+    closest-side,
+    rgba(255, 255, 255, 0.04),
+    rgba(59, 60, 66, 0.04)
+    );
+    border-radius: 20px;
+    margin-bottom: 5%;
+    width: 386px;
+    height: 652px;
+    justify-items: center;
+}
+
+
+.apresentalista{
+    width: 110px;
+    height: 31px;
+    background: #ffffff;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: #dadada;
+    border-width: 1px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+
+.litaboxe{
+    font-family: "Biryani", sans-serif;
+    font-weight: bold;
+    font-size: 0.8rem;
+    color: #000000;
+}
+
+.cardpessoas{
+    background: #ffffff;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: #dadada;
+    border-width: 1px;
+    width: 271px;
+    height: 414px;
+    position: relative;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin-top: 10px;
+      z-index: 1;
+}
+
+
+.apresentasuporte{
+    display: flex;
+    width: 100%;
+    height: 67.3px;
+    align-items: center;
+}
+
+.iconesuporte{
+    background: #ffffff;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: #dadada;
+    border-width: 1px;
+    width: 43px;
+    height: 43px;
+    position: relative;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    align-content: center;
+    justify-items: center;
+    margin-left: 15px;
+}
+
+.iconesuporte2{
+    background: linear-gradient(
+    -90deg,
+    rgba(32, 194, 61, 0) 49.03840720653534%,
+    rgba(32, 194, 61, 1) 49.04840588569641%
+    );
+    border-radius: 50%;
+    border-style: solid;
+    border-color: #20c23d;
+    border-width: 1px;
+    width: 25px;
+    height: 25px;
+    position: relative;
+    box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25),
+        0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+
+.textosapresenta{
+    margin-top: 3px;
+    margin-left: 7px;
+}
+
+.textoapresenta1{
+    font-family: "Biryani", sans-serif;
+    font-weight: bold;
+    font-size: 0.9rem;
+    color: #000000;
+}
+
+.textoapresenta2{
+    margin-top: -5px;
+    font-family: "Biryani", sans-serif;
+    font-size: 0.7rem;
+    color: #A4A4A4;
+
+}
+
+.divisor{
+    width: 98%;
+    height: 1px;
+    background-color: #DADADA;
+    margin: 0 auto;
+}
+
+
+.pessoaspres{
+    display: flex;
+    width: 100%;
+    height: 67.3px;
+    align-items: center;
+}
+
+.iconperson{
+    display: flex;
+    background: #ffffff;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: #dadada;
+    border-width: 1px;
+    min-width: 43px;
+    min-height: 43px;
+    position: relative;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    align-items: center;
+    align-items: center;
+    margin-left: 15px;
+}
+
+.iconpersonimg{
+    margin: 0 auto;
+}
+
+.textosapresenta1{
+    margin-top: 3px;
+    margin-left: 10px;
+}
+
+.textossuportecard{
+    margin-top: 20px;
+    width: 90%;
+}
+
+.textossuportecard1{
+    font-family: "Biryani", sans-serif;
+    font-weight: bold;
+    font-size: 0.9rem;
+    color: #111111;
+}
+
+.textossuportecard2{
+     margin-top: -5px;
+    font-family: "Biryani", sans-serif;
+    font-size: 0.74rem;
+    color: #4D4D4D;
+}
+
+.sombrapreta1{
+    display: flex;
+    background: #000000;
+    border-radius: 50%;
+    width: 300px;
+    height: 173px;
+    filter: blur(30px);
+    justify-content: center;
+    align-items: center;
+    z-index: 0;
+    margin-top: -120%;
+}
+
+
+
+.BOXESC2{
+    background: radial-gradient(
+    closest-side,
+    rgba(255, 255, 255, 0.04),
+    rgba(59, 60, 66, 0.04)
+    );
+    border-radius: 20px;
+    margin-bottom: 5%;
+    width: 513px;
+    height: 711px;
+    justify-items: center;
+}
+
+.imagensboxmapa{
+    margin-top: 30%;
+}
+
+.textosconsultoriabox{
+    width: 90%;
+    margin-top: 60px;
+}
+
+
+.imgmapa{
+    position: relative;
+    z-index: 1;
+}
+
+.sombrapreta3{
+    position: relative; 
+    z-index: 0;
+    display: flex;
+    background: #000000;
+    border-radius: 50%;
+    width: 300px;
+    height: 173px;
+    filter: blur(50px);
+    justify-content: center;
+    align-items: center;
+    margin-top: -100px;
+    margin-left: 40px;
+    
+}
+
+.vetoresmapa{
+    position: relative; 
+    z-index: 2;
+    margin-top: -150px;
+    margin-left: 220px;
+}
+
+.BOXESC3{
+    background: radial-gradient(
+    closest-side,
+    rgba(255, 255, 255, 0.04),
+    rgba(59, 60, 66, 0.04)
+    );
+    border-radius: 20px;
+    margin-bottom: 5%;
+    width: 386px;
+    height: 652px;
+    margin-top: 40px;
+    justify-content: center;
+    align-content: center;
+}
+
+.sistemasacompanhamento{
+    width: 100%;
+    height: auto;
+    display: flex;
+    position: relative;
+}
+
