--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -356,7 +356,7 @@ body{
      color: #4D4D4D;
 }
 
-.SOLUCOESINTELIGENTES{
+.SOLUCOESINTELIGENTES{ /* DIV DE ALINHAMENTO E INCLUSÃO DA ELO E AREA DE MEMBROS*/
     background-color: #fffdfd;
     width: 100%;
     height: auto;
@@ -365,7 +365,7 @@ body{
 }
 
 
-.SLOGAMINOVACAO{
+.SLOGAMINOVACAO{ /*SLOGAM "MENTES BRILHNANTES, SAUDE INTELIGENTE*/
     display: flex;
     margin-top: 100px;
     font-family: 'SF Pro Semibold', sans-serif;
@@ -377,14 +377,14 @@ body{
     padding-top: 130px;
 }
 
-.GRIDINOVACAO{
+.GRIDINOVACAO{ /* GRID PARA ALINHAMENTO ENTRE AREA DE MEMBROS E ELO*/
     display: flex;
     justify-content: center;
     margin-top: 1%;
     gap: 14px;
 }
 
-.BOXGRID2{
+.BOXGRID2{ /*BOX CINZA DE FUNDO*/
     background: radial-gradient(
     closest-side,
     rgba(255, 255, 255, 0.04),
@@ -394,23 +394,23 @@ body{
     margin-bottom: 5%;
 }
 
-.ELOINOVACAO{
+.ELOINOVACAO{ /*ELO*/
     width: 594px;
     height: auto;
     position: relative;
 }
 
-.AREADEMEMBROS{
+.AREADEMEMBROS{ /*AREA DE MEMBROS*/
     width: 594px;
     height: auto;
     position: relative;
 }
     
-.sombravermelha{
+.sombravermelha{ /*SOMBRAS E EFEITOS ELO*/
     display: flex;
     background: #800020;
     border-radius: 50%;
-    width: 550px;
+    width: 100%;
     height: 179px;
     position: absolute;
     filter: blur(150px);
@@ -421,11 +421,11 @@ body{
 
 }
 
-.sombrapreta{
+.sombrapreta{ /*SOMBRAS E EFEITOS ELO*/
     display: flex;
     background: #000000;
     border-radius: 50%;
-    width: 570px;
+    width: 100%;
     height: 53px;
     filter: blur(30px);
     justify-content: center;
@@ -434,12 +434,12 @@ body{
     margin-top: -10%;
 }
 
-.TEXTOSELO1{
+.TEXTOSELO1{ /*TRATAEMNTO DE TEXTOS ELO E AREA DE MEMBROS*/
      margin: 14% 0% 0% 6%;
     padding-bottom: 2%;
 }
 
-.botaoaviso{
+.botaoaviso{ /*BOTAO DESTQUE AMARELO*/
     display: flex;
     background: #e0cf1a;
     border-radius: 10px;
@@ -454,7 +454,7 @@ body{
     justify-items: center;
 }
 
-.novo{
+.novo{ /*ESCRITO DENTRO DO BOTAO*/
     color: #000000;
     width: 100%;
     display: flex;
@@ -465,7 +465,7 @@ body{
     font-style: italic;
     font-size: 0.9rem;
 }
-.eloimg{
+.eloimg{ /*IMAGEM ELO*/
     display: flex;
     background: none;
     justify-content: center;
@@ -475,12 +475,12 @@ body{
 
 
 
-.sombrapreta2{
+.sombrapreta2{ /*SOMBRAS E EFEITOS ATEA DE MEMBROS*/
     position: absolute;
     display: flex;
     background: #000000;
     border-radius: 50%;
-    width: 570px;
+    width: 100%;
     height: 53px;
     filter: blur(50px);
     justify-content: center;
@@ -489,7 +489,7 @@ body{
     margin-top: -25%;
 }
 
-.desiningsitemembros{
+.desiningsitemembros{ /*ESBOÇO SITE PARA MEMBROS*/
     width: 487px;
     height: 259px;
     background-color: #fffdfd;
@@ -499,27 +499,27 @@ body{
     border-radius: 10px;
 }
 
-.logomembros0{
+.logomembros0{ /* DIV ALINHAMENTO DO LOGO PARA O ESBOÇO DO SIE*/
     display: flex;
     width: 100%;
     justify-content: center;
 
 }
 
-.logomembros{
+.logomembros{ /*LOGO*/
     width: 85px;
     height: 55px;
     justify-content: center;
 }
 
-.tracodiv{
+.tracodiv{ /* TRAÇO DE DIVISAO ESBOÇO*/
     display: block;
     width: 100%;
     height: 1px;
     background-color: #D4D0D0;
 }
 
-.navmembros{
+.navmembros{ /*ALINHAMENTO NAVBAR*/
     position: absolute;
     display: block;
     width: 118px;
@@ -528,22 +528,22 @@ body{
     justify-items: center;
 }
 
-.textonav{
+.textonav{ /*ALINHAMENTO DOS TEXTOS NAVBAR*/
     display: block;
     margin-top: 20%;
 }
 
-.textonav1{
+.textonav1{ /*FONTE DOS TEXTOS NAVBAR*/
     display: block;
     font-family: 'SF Pro Display', sans-serif;
     margin: 5%;
 }
 
-.on-boarding{
+.on-boarding{ /*COR ESPECIFICA DE TEXTO*/
     color: #800020;
 }
 
-.telavideo{
+.telavideo{ /*TAMANHO E ELINHAMENTO DA TELA DE VIDEO*/
     display: flex;
     width: 246px;
     height: 132px;
@@ -554,7 +554,7 @@ body{
     align-items: center;
 }
 
- .botao-play {
+ .botao-play { /*FUNDO BOTAO PLAY*/
       width: 60px;
       height: 60px;
       background-color: white;
@@ -565,7 +565,7 @@ body{
 
     }
 
-.triangulo {
+.triangulo { /*TRIANGULO CENTRAL BOTAO PALY*/
       width: 0;
       height: 0;
       border-left: 14px solid black;
@@ -574,7 +574,7 @@ body{
       margin-left: 3px;
 }
 
-.sombraaream{
+.sombraaream{ /*ALINHAMENTO E COR SOMBRA DESFARCE PARA O ESBOÇO SITE*/
     background: #F6F6F6;
     border-radius: 50%;
     width: 599px;
@@ -585,29 +585,31 @@ body{
     margin-top: -7.3%;
 }
 
-.TEXTOSELO2{
+.TEXTOSELO2{ /*alinhamento texto area de membros*/
     margin: 15% 0% 0% 6%;
     padding-bottom: 2%;
 }
 
-.imgprefeituras{
-    width: 100%;
-    height: 209px;
-}
 
-.aula1{
+.aula1{ /*AULA 01 ALINHAMETNO */
     display: flex;
     justify-content: center;
     margin-left: -35%;
     padding-top: 5%;
 }
 
-.HISTORIASJUNTOS{
+.imgprefeituras{ /*DIV DE IMAGENS DOS CLIENTES PARCEIROS*/
+    width: 100%;
+    height: 209px;
+}
+
+
+.HISTORIASJUNTOS{ /*DIV ALINHAEMTNO TEXTO*/
     display: flex;
     justify-content: center;
 }
 
-.TEXTOHISTORIAJUNTOS{
+.TEXTOHISTORIAJUNTOS{ /*COR E FONTE DOS TEXTOS*/
     margin-top: 30px;
     display: flex;
     font-family: 'SF Pro Semibold', sans-serif;
@@ -617,32 +619,32 @@ body{
     color: rgba(17, 17, 17, 0.8);
 }
 
-.imglugares{
+.imglugares{ /*ALINHAMENTO DA DIV IMAGENS*/
     display: flex;
     align-content:center ;
     justify-content: center;
     margin-top: 30px;
 }
 
-.todasimg{
+.todasimg{/*ALINHAMENTO DAS IMAGENS DENTRO DA DIV*/
     display: flex;
     gap: 100px;
 }
 
-.NOSSOSSERVIÇOA{
+.NOSSOSSERVIÇOA{ /*BACKGROUND DA SECTION*/
     background-color: #fffdfd;
     justify-content: center;
     padding-top: 100px;
 }
 
 
-.NossaConsultoria{
+.NossaConsultoria{ /*ALINHAMETNO DA DIV DE TEXTO*/
     width: 100%;
     margin: 0 auto;
     justify-items: center;
 }
 
-.Textonossaconsultoria{
+.Textonossaconsultoria{ /*FONTE E COR DO TEXTO*/
     font-family: 'SF Pro Semibold', sans-serif;
     font-weight: 600;
     font-style: italic;
@@ -650,14 +652,14 @@ body{
     color: rgba(17, 17, 17, 0.8);
 }
 
-.BOXESCONSULTORIA{
+.BOXESCONSULTORIA{ /*DEIV DE ALINHAMENTO DAS BOXES DOS TIPOS DE CONSULTORIA*/
     display: flex;
     margin-top: 50px;
     justify-content: center;
     gap: 60px;
 }
 
-.BOXESC1{
+.BOXESC1{ /*BACKGROUND BOXE 1*/
     margin-top: 40px;
     background: radial-gradient(
     closest-side,
@@ -672,7 +674,7 @@ body{
 }
 
 
-.apresentalista{
+.apresentalista{ /*APRESENTAÇÃO DA LISTA ALINHAMENTO E COR*/
     width: 110px;
     height: 31px;
     background: #ffffff;
@@ -689,14 +691,14 @@ body{
 }
 
 
-.litaboxe{
+.litaboxe{ /*FONTE E ALINHAMENTO DO TEXTO DE LISTAS*/
     font-family: "Biryani", sans-serif;
     font-weight: bold;
     font-size: 0.8rem;
     color: #000000;
 }
 
-.cardpessoas{
+.cardpessoas{ /*ALINHAMENTO E BACKGROUND DO CARD*/
     background: #ffffff;
     border-radius: 20px;
     border-style: solid;
@@ -711,14 +713,14 @@ body{
 }
 
 
-.apresentasuporte{
+.apresentasuporte{ /*ALINHAMETNO DO BOXE BRANCO E VERDE A ESQUERDA*/
     display: flex;
     width: 100%;
     height: 67.3px;
     align-items: center;
 }
 
-.iconesuporte{
+.iconesuporte{ /*FUNDO BRANCPO*/
     background: #ffffff;
     border-radius: 5px;
     border-style: solid;
@@ -733,7 +735,7 @@ body{
     margin-left: 15px;
 }
 
-.iconesuporte2{
+.iconesuporte2{ /*TRATAMENTO E COR VERDE DE SOBREPOSIÇÃO*/
     background: linear-gradient(
     -90deg,
     rgba(32, 194, 61, 0) 49.03840720653534%,
@@ -751,19 +753,19 @@ body{
 }
 
 
-.textosapresenta{
+.textosapresenta{ /* DIV DE ESPAÇAMENTO E ALINHAMETNO DOS TEXTOS*/
     margin-top: 3px;
     margin-left: 7px;
 }
 
-.textoapresenta1{
+.textoapresenta1{ /*TEXTOS DE TITULOS*/
     font-family: "Biryani", sans-serif;
     font-weight: bold;
     font-size: 0.9rem;
     color: #000000;
 }
 
-.textoapresenta2{
+.textoapresenta2{ /*TEXTOS DE DESCRIÇÃO*/
     margin-top: -5px;
     font-family: "Biryani", sans-serif;
     font-size: 0.7rem;
@@ -771,7 +773,7 @@ body{
 
 }
 
-.divisor{
+.divisor{ /*DIVISOR ENTRE UMA PESSOA E OUTRA*/
     width: 98%;
     height: 1px;
     background-color: #DADADA;
@@ -779,14 +781,14 @@ body{
 }
 
 
-.pessoaspres{
+.pessoaspres{ /* TAMANHDO DE CADA LINHA (HORIZONTAL E VERTICAL)*/ 
     display: flex;
     width: 100%;
     height: 67.3px;
     align-items: center;
 }
 
-.iconperson{
+.iconperson{ /*FUNDO BRANDO DA CAIXA PARA O INCONE DE PERSON*/
     display: flex;
     background: #ffffff;
     border-radius: 5px;
@@ -802,35 +804,31 @@ body{
     margin-left: 15px;
 }
 
-.iconpersonimg{
+.iconpersonimg{ /*ALINHAMENTO DOS ICONES PERSON*/
     margin: 0 auto;
 }
 
-.textosapresenta1{
-    margin-top: 3px;
-    margin-left: 10px;
-}
 
-.textossuportecard{
+.textossuportecard{ /*DIV DE ALINAHMETNO DOS TEXTOS DO CARD SUPORTE*/
     margin-top: 20px;
     width: 90%;
 }
 
-.textossuportecard1{
+.textossuportecard1{ /*TITULOS DOS CARDS*/
     font-family: "Biryani", sans-serif;
     font-weight: bold;
     font-size: 0.9rem;
     color: #111111;
 }
 
-.textossuportecard2{
+.textossuportecard2{/* DESCRIÇÃO CARDS*/
      margin-top: -5px;
     font-family: "Biryani", sans-serif;
     font-size: 0.74rem;
     color: #4D4D4D;
 }
 
-.sombrapreta1{
+.sombrapreta1{ /*SOMBRA DE FUNDO DO CARD*/
     display: flex;
     background: #000000;
     border-radius: 50%;
@@ -845,7 +843,7 @@ body{
 
 
 
-.BOXESC2{
+.BOXESC2{ /*BACKGROUND E TAMNANHO BOXE CONSULTORIA PRESENCIAL*/
     background: radial-gradient(
     closest-side,
     rgba(255, 255, 255, 0.04),
@@ -858,22 +856,16 @@ body{
     justify-items: center;
 }
 
-.imagensboxmapa{
+.imagensboxmapa{ /*ALINHAMENTO DIV DE IMAGEM DO MAPA*/
     margin-top: 30%;
 }
 
-.textosconsultoriabox{
-    width: 90%;
-    margin-top: 60px;
-}
-
-
-.imgmapa{
+.imgmapa{ /*TRATAMENTO IMAGEM MAPA*/
     position: relative;
     z-index: 1;
 }
 
-.sombrapreta3{
+.sombrapreta3{ /*SOMBRA PRETA DE FUNDO DO MAPA*/
     position: relative; 
     z-index: 0;
     display: flex;
@@ -889,14 +881,19 @@ body{
     
 }
 
-.vetoresmapa{
+.vetoresmapa{ /*ALINHAMENTO DA IMAGEM DOS VETORES SOBRE O MAPA*/
     position: relative; 
     z-index: 2;
     margin-top: -150px;
     margin-left: 220px;
 }
 
-.BOXESC3{
+.textosconsultoriabox{ /*ALINHAMENTO DOS TEXTOS*/
+    width: 90%;
+    margin-top: 60px;
+}
+ 
+.BOXESC3{ /* ALINHAMENTO E BACKGROUND BOXE 3*/
     background: radial-gradient(
     closest-side,
     rgba(255, 255, 255, 0.04),
@@ -911,17 +908,17 @@ body{
     align-content: center;
 }
 
-.sistemasacompanhamento{
+.sistemasacompanhamento{ /*ALINHAMENTO DIV DAS IMAGENS*/
    align-items: center;
    justify-items: center;
 }
 
-.logofns{
+.logofns{ /*ESPAÇAMETNO LOGO FNS*/
     margin-top: 150px;
 }
 
 
-.textossistemas{
+.textossistemas{ /*ALINHAEMNTO TEXTOS*/
     margin-top: 80px;
     width: 90%;
 }
